--- a/scss/base/_normalize.scss
+++ b/scss/base/_normalize.scss
@@ -17,6 +17,10 @@ height: 100%;
 .link-border-radius{
   border-radius: side-values(0 20px 20px 20px) !important;
 }
+.div-border-radius{
+  border-radius: side-values(20px 0 20px 20px) !important;
+}
+
 .hover-link{
   background: $light-gray;
   border-radius: side-values(0 20px 20px 20px);
