--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -122,31 +122,35 @@
 }
 
 @mixin large-medium-screens {
-  @media (min-width: 480px) {
+  @media (min-width: 768px) {
     @content;
   }
 }
 
-@mixin x-small {
-  @media only screen and (max-width: 575.98px) {
+@mixin small-screen {
+  @media only screen and (max-width: 767.99px) {
     @content;
   }
 }
 
-@mixin small {
-  @media only screen and (max-width: 767.98px) {
+@mixin medium-screen {
+  @media only screen and (min-width: 768px) {
     @content;
   }
 }
 
-@mixin medium {
-  @media only screen and (min-width: 991.98px) {
+@mixin large-screen {
+  @media only screen and (min-width: 992px) {
     @content;
   }
 }
 
-@mixin large {
-  @media only screen and (min-width: 1199.98px) {
+@mixin x-large-screen {
+  @media only screen and (min-width: 1200px) {
     @content;
   }
+}
+
+@mixin box-shadow {
+  box-shadow: 0px 18px 18px 0px rgba(0, 0, 0, 0.07);
 }
