added tired page

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -76,6 +76,8 @@ $dir: ltr;
 @import "layouts/apps-link";
 @import "layouts/authentication/login";
 @import "layouts/authentication/signup";
+@import "layouts/tyres/tyres";
+@import "layouts/tyres/tyres-search";
 @import "layouts/_footer";
 
 /* STATE - page of site*/
