--- a/scss/modules/_components.scss
+++ b/scss/modules/_components.scss
@@ -203,3 +203,35 @@
 .boarder-right-bottom-radius {
   @include boarder-right-radius(0, 20px);
 }
+
+.slick-prev,
+.slick-next {
+  @include font-size(23px);
+  cursor: pointer;
+}
+
+.slick-next {
+  position: absolute;
+  bottom: 96%;
+  left: 98%;
+  transform: translate(-50%, -50%);
+}
+
+.slick-prev {
+  position: absolute;
+  bottom: 96%;
+  left: 95%;
+  transform: translate(-50%, -50%);
+}
+
+.slick-slide {
+  margin-left: 30px;
+  .card {
+    border-style: none;
+    border-radius: 20px;
+  }
+}
+
+.component-background {
+  background: $light-gray;
+}
