--- a/scss/modules/_dialog.scss
+++ b/scss/modules/_dialog.scss
@@ -2,8 +2,14 @@
   .ui-dialog-titlebar {
     background: $light-gray;
     border-radius: inherit;
+
+    .ui-dialog-titlebar-close {
+      position: absolute;
+      top: 16px;
+      right: 16px;
+    }
   }
 }
-.ui-dialog{
+.ui-dialog {
   border-radius: side-values(20px 0 20px 20px) !important;
 }
