--- a/scss/modules/_dialog.scss
+++ b/scss/modules/_dialog.scss
@@ -12,4 +12,9 @@
 }
 .ui-dialog {
   border-radius: side-values(20px 0 20px 20px) !important;
+  #title {
+    h1 {
+      text-transform: capitalize;
+    }
+  }
 }
