--- a/scss/modules/_select.scss
+++ b/scss/modules/_select.scss
@@ -6,7 +6,6 @@
     background: none;
     box-shadow: none;
     cursor: pointer;
-    width: 90px;
 
     .select__indicators {
       width: 20px;
@@ -19,10 +18,11 @@
     }
   }
   .select__menu {
-    width: 139px;
     .select__menu-list {
       .select__option {
         color: $basic-black;
+        text-align: $left;
+        cursor: pointer;
       }
     }
   }
