--- a/scss/layouts/tyres/_tyres.scss
+++ b/scss/layouts/tyres/_tyres.scss
@@ -1,6 +1,41 @@
+.tyres-image{
+    @include small-screen{
+      background: url(/img/tyres-xs.jpg);
+      height: 250px;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center top;
+    }
+  }
+
+
+#tyres-best-sellers{
+    @include large-medium-screens{
+        padding-top: 55px;
+    }
+    @include small-screen{
+        margin-top: -90px;
+    }
+}
+
+#tyres-top-brands{
+    .tyre-brand-container{
+        padding-bottom: 17px;
+    }
+}
+
+#tyres-ads{
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+#tyres-sizes{
+
+}
+
 #tyres {
-    @include medium-screen {
-        background: url(/img/hero-lg.jpg);
+    @include large-medium-screens {
+        background: url(/img/tyres-lg.jpg);
         min-height: 350px;
         background-repeat: no-repeat;
         background-size: cover;
@@ -8,4 +43,145 @@
       }
 
       color: $white;
+      text-align: center;
+
+      .tyres-content{
+        position: relative;
+        @include large-medium-screens{
+          top: 155px;
+          bottom: 261px;
+        }
+
+        .tyres-title{
+            height: 34px;
+        }
+
+        @include small-screen{
+            top: -160px;
+            bottom: -160px;
+          }
+
+        h1 {
+            @include large-medium-screens{
+              @include font-size($title-font-size);
+              margin-bottom: 40px;
+            }
+    
+          }
+
+        .subtitle-container{
+            @include large-medium-screens{
+                padding-bottom: 14px;
+                h2 {
+                    text-transform: uppercase;
+                    float: left;
+                    @include font-size(20px);
+                    margin-bottom:0;
+                }
+                p{
+                    padding-left: 10px;
+                    padding-top : 4px;
+                    float:left;
+                    vertical-align: bottom;
+                    margin-bottom: 0;
+                }
+            }
+
+            @include small-screen{
+                background-color: #fff;
+                @include boarder-left-radius(20px,0);
+                margin-bottom: 5px;
+                margin-top: 48px;
+                height: 77px;
+
+                h2 {
+                    padding-top: 29px;
+                    padding-left: 19px;
+                    text-transform: uppercase;
+                    float: left;
+                    @include font-size(25px);
+                    margin-bottom:0;
+                    color: #222;
+                }
+                p{
+                    display: none;
+                }
+            }
+            
+        }
+        
+
+        .tyres-dropdown{
+            .size-selection-container{
+                @include small-screen{
+                    @include box-shadow;
+                    @include boarder-left-radius(0, 20px);
+                    @include boarder-right-radius(0, 20px);
+                    padding-bottom: 10px;
+                    margin-bottom: 21px;
+                }
+            }
+
+            .h-seperator {
+                position: relative;
+                left: 10px;
+                height: 1px;
+                }
+            
+            label{
+                  display: none;
+            }
+            br{
+                  display: none;
+            }
+            .width-field-container{
+                background-color:#fff;
+                @include boarder-left-radius;
+                max-height: 51px;
+
+                .width-field{
+                    border: none;
+                    width: 100%;
+                }
+            }
+
+            .height-field-container{
+                background-color:#fff;
+                #{$left}: 1px;
+                max-height: 51px;
+                .height-field{
+                    border: none;
+                    width:100%;
+                    height: auto;
+                }
+            }
+            
+
+            .diameter-field-container{
+                background-color:#fff;
+                #{$left}: 2px;
+                max-height: 51px;
+                @include boarder-right-radius(0, 20px);
+                .diameter-field{
+                    width: 100%;
+                    border:none;
+                }
+            }
+            
+            .btn-container{
+                max-height: 51px;
+                @include boarder-right-radius(0, 20px);
+                .btn-primary{
+                    width: 100%;
+                }
+                @include small-screen{
+                    padding-left: 0;
+                    padding-right: 0;
+                }    
+            }
+
+        }
+      }
+
+     
 }
