moved sidebar to it's own component

--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -210,3 +210,12 @@
     display: block;
   }
 }
+
+#mobile-header-details {
+  button {
+    font-size: inherit;
+    i {
+      left: 0;
+    }
+  }
+}
