--- a/scss/app.scss
+++ b/scss/app.scss
@@ -77,6 +77,7 @@ $dir: ltr;
 @import "layouts/authentication/login";
 @import "layouts/authentication/signup";
 @import "layouts/tyres/tyres";
+@import "layouts/category/motor-oil";
 @import "layouts/tyres/tyres-search";
 @import "layouts/_footer";
 
