--- a/scss/base/_normalize.scss
+++ b/scss/base/_normalize.scss
@@ -29,3 +29,15 @@ height: 100%;
   box-shadow: 0px 18px 18px 0px rgba(0, 0, 0, 0.07);
 
 }
+
+.w-sm-100 {
+  @include small-screen {
+    width: 100%;
+  }
+}
+
+.w-md-100 {
+  @include medium-screen {
+    width: 100%;
+  }
+}
