--- a/scss/layouts/vehicles/_vehicles.scss
+++ b/scss/layouts/vehicles/_vehicles.scss
@@ -1,9 +1,17 @@
 #vehicles {
+  @include small-screen {
+    padding-top: 36px;
+    background: $light-gray;
+  }
   .group-shadow-input {
     @extend .group-shadow-div;
     height: 55px;
     top: 9px;
     background: $white;
+
+    @include small-screen {
+      height: 324px;
+    }
   }
 
   form {
@@ -11,8 +19,12 @@
       position: relative;
       @extend .no-gutters;
 
-      .col-lg-3 {
+      .col-md-3 {
         padding-right: 6px;
+
+        @include small-screen {
+          padding-right: inherit;
+        }
       }
     }
 
@@ -23,14 +35,26 @@
 
   .div-first-rounded {
     .select-input {
-      margin-left: 11px;
+      margin-#{$left}: 11px;
       border-radius: corner-values(20px 0 0 20px) !important;
+
+      @include small-screen {
+        margin-#{$left}: 0;
+      }
+
+      @include medium-screen {
+        margin-#{$left}: 0;
+      }
     }
   }
 
   .div-last-rounded {
     .form-control {
       border-radius: 0 0 20px 0 !important;
+
+      @include small-screen {
+        border-radius: 0 0 20px 20px !important;
+      }
     }
     input {
       border-radius: inherit;
@@ -66,20 +90,47 @@
   .vehicle-radio {
     align-items: baseline;
   }
-  .text-align-right {
+  .text-align {
     text-align: $right;
+    @include small-screen {
+      text-align: inherit;
+    }
   }
   .btn-primary {
     @include font-size(20px);
     height: 55px;
     @extend .box-shadow;
+    @extend .w-sm-100;
     text-transform: capitalize;
+    text-align: $right;
+
+    @include small-screen {
+      margin-bottom: 202px
+    }
   }
   .select-input {
     label,
     sub,
     br {
       display: none;
+    }
+  }
+  #title {
+    @include small-screen {
+      h1 {
+        text-transform: capitalize;
+      }
+      > div {
+        display: inline-block !important;
+      }
+    }
+  }
+
+  .m-sm {
+    @include small-screen {
+      margin-top: 25px;
+      margin-#{$left}: 15px;
+      margin-#{$right}: 15px;
     }
   }
 }
