--- a/scss/modules/_renderFileInput.scss
+++ b/scss/modules/_renderFileInput.scss
@@ -2,8 +2,8 @@
   .input-group-prepend {
     position: absolute;
     top: 50%;
-    left: 85%;
-    transform: translate(-50%, -50%);
+    right: 13px;
+    transform: translate(0%,-50%);
     z-index: 10;
     .ellipse {
       box-shadow: none;
