fixed medium screen view for home page

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -80,6 +80,7 @@ $dir: ltr;
 @import "layouts/category/motor-oil";
 @import "layouts/tyres/tyres-search";
 @import "layouts/_footer";
+@import "layouts/quotation-request";
 
 /* STATE - page of site*/
 @font-face {
