--- a/scss/app.scss
+++ b/scss/app.scss
@@ -80,5 +80,6 @@ $dir: ltr;
 @import "layouts/tyres/tyres";
 @import "layouts/tyres/tyres-search";
 @import "layouts/vehicles/vehicles";
+@import "layouts/settings/wish-list";
 @import "layouts/footer";
 
