added header component to use for the setting page

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -80,6 +80,7 @@ $dir: ltr;
 @import "layouts/tyres/tyres";
 @import "layouts/tyres/tyres-search";
 @import "layouts/vehicles/vehicles";
-@import "layouts/settings/wish-list";
+@import "layouts/setting/wish-list";
+@import "layouts/setting/setting";
 @import "layouts/footer";
 
