--- a/scss/modules/_components.scss
+++ b/scss/modules/_components.scss
@@ -1,7 +1,7 @@
 //icon-font
 @include font-face($icon-font-name, $icon-path);
-[class^="icon-"]:before,
-[class*=" icon-"]:before {
+[class^='icon-']:before,
+[class*=' icon-']:before {
   font-family: $icon-font-name !important;
   font-style: normal !important;
   font-weight: normal !important;
@@ -14,127 +14,130 @@
   @extend .position-relative;
 }
 .icon-arrow-left:before {
-  content: "\61";
+  content: '\61';
 }
 .icon-arrow-right:before {
-  content: "\62";
+  content: '\62';
 }
 .icon-cart:before {
-  content: "\63";
+  content: '\63';
 }
 .icon-custom-order:before {
-  content: "\64";
+  content: '\64';
 }
 .icon-delivery:before {
-  content: "\65";
+  content: '\65';
 }
 .icon-email:before {
-  content: "\66";
+  content: '\66';
 }
 .icon-facebook-logo:before {
-  content: "\67";
+  content: '\67';
 }
 .icon-play-store:before {
-  content: "\69";
+  content: '\69';
 }
 .icon-pricing:before {
-  content: "\6a";
+  content: '\6a';
 }
 .icon-product:before {
-  content: "\6b";
+  content: '\6b';
 }
 .icon-to-up:before {
-  content: "\6d";
+  content: '\6d';
 }
 .icon-twitter:before {
-  content: "\6e";
+  content: '\6e';
 }
 .icon-wallet:before {
-  content: "\70";
+  content: '\70';
 }
 .icon-whatsapp:before {
-  content: "\71";
+  content: '\71';
 }
 .icon-world:before {
-  content: "\72";
+  content: '\72';
 }
 .icon-apple:before {
-  content: "\73";
+  content: '\73';
 }
 .icon-heart:before {
-  content: "\74";
+  content: '\74';
 }
 .icon-home:before {
-  content: "\75";
+  content: '\75';
 }
 .icon-linked-in-logo:before {
-  content: "\76";
+  content: '\76';
 }
 .icon-user:before {
-  content: "\77";
+  content: '\77';
 }
 .icon-garage:before {
-  content: "\68";
+  content: '\68';
 }
 .icon-search:before {
-  content: "\6c";
+  content: '\6c';
 }
 .icon-arrow-down:before {
-  content: "\6f";
+  content: '\6f';
 }
 //select2
-.select2-container--default
-.select2-selection--single{
+.select2-container--default .select2-selection--single {
   border-width: 0;
-  .select2-selection__rendered{
+  .select2-selection__rendered {
     @include font-size(12px);
     padding: side-values(0 0 0 5px);
     display: inline-block !important;
     border-radius: 0;
   }
-  .select2-selection__arrow{
+  .select2-selection__arrow {
     position: relative;
     display: inline-block;
-    b{
+    b {
       border-color: #ccc transparent transparent transparent;
       margin-top: -3px;
     }
   }
 }
-.select2-container--default.select2-container--open .select2-selection--single .select2-selection__arrow b{
-  border-color: transparent transparent #ccc transparent
+.select2-container--default.select2-container--open
+  .select2-selection--single
+  .select2-selection__arrow
+  b {
+  border-color: transparent transparent #ccc transparent;
 }
-.select2-container{
+.select2-container {
   width: auto !important;
 }
-.select2-container--open .select2-dropdown--below{
+.select2-container--open .select2-dropdown--below {
   width: auto !important;
 }
-.select2-dropdown{
+.select2-dropdown {
   @extend .link-border-radius;
   overflow: hidden;
   border-width: 0;
   @extend .box-shadow;
 }
-.select2-results__option{
+.select2-results__option {
   padding: 5px 10px;
   @include font-size(12px);
   border-bottom: 1px solid $light-gray;
   min-width: 100px;
 }
-.select2-container--default .select2-results__option[aria-selected=true],
-.select2-container--default .select2-results__option--highlighted[aria-selected]{
+.select2-container--default .select2-results__option[aria-selected='true'],
+.select2-container--default
+  .select2-results__option--highlighted[aria-selected] {
   background-color: $light-gray;
   color: $basic-gray;
 }
-.seperator{
+.seperator {
   width: 1px;
   background: #ccc;
   display: inline-block;
   @extend .align-middle;
 }
 
-.h-seperator{
+.h-seperator {
   width: 100%;
   background: #ccc;
   display: inline-block;
@@ -190,11 +193,11 @@
 }
 
 .boarder-left-radius {
-  @include boarder-left-radius
+  @include boarder-left-radius;
 }
 
 .boarder-right-radius {
-  @include boarder-right-radius
+  @include boarder-right-radius;
 }
 
 .boarder-right-top-radius {
@@ -237,5 +240,10 @@
 }
 
 .component-background-color {
-  background-image: linear-gradient(to bottom, #37363d, #37363d), linear-gradient(to right, #ee4036, #000000);
+  background-image: linear-gradient(to bottom, #37363d, #37363d),
+    linear-gradient(to right, #ee4036, #000000);
+  position: absolute;
+  height: 105px;
+  left: 0;
+  right: 0;
 }
