--- a/scss/app.scss
+++ b/scss/app.scss
@@ -35,7 +35,7 @@ $dir: ltr;
 //@import "bootstrap/alert";
 //@import "bootstrap/progress";
 @import "bootstrap/media";
-//@import "bootstrap/list-group";
+@import "bootstrap/list-group";
 @import "bootstrap/close";
 @import "bootstrap/modal";
 //@import "bootstrap/tooltip";
@@ -59,6 +59,7 @@ $dir: ltr;
 @import "modules/typography.scss";
 @import "modules/blocks.scss";
 @import "modules/buttons.scss";
+@import "modules/list-group";
 @import "modules/components.scss";
 @import "modules/select";
 @import "modules/sections.scss";
