--- a/scss/layouts/setting/_wish-list.scss
+++ b/scss/layouts/setting/_wish-list.scss
@@ -2,4 +2,9 @@
   .component-background-color {
     
   }
+
+  .wish-list_product-details {
+    display: flex;
+   flex-direction: column;
+  }
 }
