--- a/scss/modules/_components.scss
+++ b/scss/modules/_components.scss
@@ -1,5 +1,16 @@
-//icon-font
 @include font-face($icon-font-name, $icon-path);
+[data-icon]:before {
+  font-family: $icon-font-name !important;
+  content: attr(data-icon);
+  font-style: normal !important;
+  font-weight: normal !important;
+  font-variant: normal !important;
+  text-transform: none !important;
+  speak: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 [class^='icon-']:before,
 [class*=' icon-']:before {
   font-family: $icon-font-name !important;
@@ -13,74 +24,110 @@
   -moz-osx-font-smoothing: grayscale;
   @extend .position-relative;
 }
-.icon-arrow-left:before {
+.icon-add-vehicle:before {
   content: '\61';
 }
-.icon-arrow-right:before {
+.icon-alert:before {
   content: '\62';
 }
-.icon-cart:before {
+.icon-apple:before {
   content: '\63';
 }
-.icon-custom-order:before {
+.icon-arrow-down:before {
   content: '\64';
 }
-.icon-delivery:before {
+.icon-arrow-left:before {
   content: '\65';
 }
-.icon-email:before {
+.icon-arrow-right:before {
   content: '\66';
 }
-.icon-facebook-logo:before {
+.icon-cart:before {
   content: '\67';
 }
-.icon-play-store:before {
-  content: '\69';
-}
-.icon-pricing:before {
-  content: '\6a';
-}
-.icon-product:before {
-  content: '\6b';
-}
-.icon-to-up:before {
-  content: '\6d';
-}
-.icon-twitter:before {
-  content: '\6e';
-}
-.icon-wallet:before {
-  content: '\70';
-}
-.icon-whatsapp:before {
-  content: '\71';
-}
-.icon-world:before {
-  content: '\72';
-}
-.icon-apple:before {
-  content: '\73';
-}
-.icon-heart:before {
-  content: '\74';
-}
-.icon-home:before {
-  content: '\75';
-}
-.icon-linked-in-logo:before {
-  content: '\76';
-}
-.icon-user:before {
-  content: '\77';
-}
-.icon-garage:before {
+.icon-checked:before {
   content: '\68';
 }
-.icon-search:before {
+.icon-close:before {
+  content: '\69';
+}
+.icon-custom-order:before {
+  content: '\6b';
+}
+.icon-delivery:before {
   content: '\6c';
 }
-.icon-arrow-down:before {
+.icon-email:before {
+  content: '\6d';
+}
+.icon-facebook-logo:before {
+  content: '\6e';
+}
+.icon-filter:before {
   content: '\6f';
+}
+.icon-garage:before {
+  content: '\70';
+}
+.icon-grid:before {
+  content: '\71';
+}
+.icon-heart:before {
+  content: '\72';
+}
+.icon-hide-password:before {
+  content: '\73';
+}
+.icon-home:before {
+  content: '\74';
+}
+.icon-linked-in-logo:before {
+  content: '\75';
+}
+.icon-list:before {
+  content: '\76';
+}
+.icon-play-store:before {
+  content: '\77';
+}
+.icon-pricing:before {
+  content: '\78';
+}
+.icon-product:before {
+  content: '\79';
+}
+.icon-reset:before {
+  content: '\7a';
+}
+.icon-search:before {
+  content: '\41';
+}
+.icon-send:before {
+  content: '\42';
+}
+.icon-shopping-bag:before {
+  content: '\43';
+}
+.icon-show-password:before {
+  content: '\44';
+}
+.icon-to-up:before {
+  content: '\45';
+}
+.icon-twitter:before {
+  content: '\47';
+}
+.icon-user:before {
+  content: '\48';
+}
+.icon-vehicle:before {
+  content: '\49';
+}
+.icon-wallet:before {
+  content: '\4a';
+}
+.icon-whatsapp:before {
+  content: '\4b';
 }
 //select2
 .select2-container--default .select2-selection--single {
