--- a/scss/app.scss
+++ b/scss/app.scss
@@ -84,5 +84,6 @@ $dir: ltr;
 @import "layouts/vehicles/vehicles";
 @import "layouts/setting/wish-list";
 @import "layouts/setting/setting";
+@import "layouts/cart";
 @import "layouts/footer";
 @import "layouts/quotation-request";
