--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -65,3 +65,15 @@ label {
   @include font-size(32px);
   color: $twitter-color;
 }
+
+.padding-left-6{
+  @include padding-left(6px);
+}
+
+.padding-right-0{
+  @include padding-right(0);
+}
+
+.no-right-padding{
+  padding-right:0;
+}
