--- a/src/components/QuotationRequest/QuotationRequest.css
+++ b/src/components/QuotationRequest/QuotationRequest.css
@@ -1,3 +1,5 @@
+
+/*
 .QuotationRequest-container {
  display: flex;
  flex-direction: column;
@@ -23,3 +25,4 @@
  justify-content: center;
  margin: 2em 0 0 0;
 }
+*/
