--- a/scss/layouts/_quotation-request.scss
+++ b/scss/layouts/_quotation-request.scss
@@ -133,11 +133,16 @@
         padding-bottom: 10px;
         margin-bottom: 30px;
 
+        label{
+          display: none;
+        }
+        br{
+          display: none;
+        }
+
         .garage-btn-container{
             text-align: right;
         }
-
-        
 
         .select-field-make{
           @include boarder-left-radius;
@@ -158,13 +163,17 @@
         }
 
         .parts-container{
-          //display: flex;
-
+          padding-bottom: 11px;
           label{
             display: none;
           }
           br{
             display: none;
+          }
+
+          .btn{
+            left:0;
+            @include font-size(15px);
           }
         
         }
@@ -172,6 +181,7 @@
           text-align: $right;
           position: relative;
           .btn{
+            @include box-shadow;
             color: $brand-color;
             @include font-size(15px);
             position: absolute;
@@ -180,7 +190,6 @@
             top: 11px;
             background:$white;
             border-top-right-radius: 0!important;
-//            @include boarder-right-radius(0, 0);
           }
         }
     }
