number picker style

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -20,6 +20,10 @@ $basic-dark-white: rgba(255, 255, 255, 0.5);
 $very-light-pink: rgba(235, 235, 235, 0.3);
 $facebook-color: #475993;
 $twitter-color: #03a9f4;
+$dark-50: rgba(39, 39, 52, 0.5);
+$dark-70: rgba(39, 39, 52, 0.7);
+$dark-80: rgba(39, 39, 52, 0.8);
+
 //img
 $img-path: "../public/img";
 
