--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -154,3 +154,9 @@
 @mixin box-shadow {
   box-shadow: 0px 18px 18px 0px rgba(0, 0, 0, 0.07);
 }
+
+@for $i from 1 through 100 {
+  .margin-right-#{$i} {
+    margin-right: #{$i}px;
+  }
+}
