--- a/scss/modules/_components.scss
+++ b/scss/modules/_components.scss
@@ -287,8 +287,7 @@
 }
 
 .component-background-color {
-  background-image: linear-gradient(to bottom, #37363d, #37363d),
-    linear-gradient(to right, #ee4036, #000000);
+  background: linear-gradient(to right, #ee4036, #000000), linear-gradient(to bottom, #37363d, #37363d);
   position: absolute;
   height: 105px;
   left: 0;
