--- a/scss/modules/_number_picker.scss
+++ b/scss/modules/_number_picker.scss
@@ -1,4 +1,5 @@
 #number-picker {
+  display: flex;
   .btn-positive {
       @extend .btn-secondary;
       border-radius: side-values(20px 0 0 20px) !important;
@@ -9,7 +10,6 @@
   }
   input {
       @extend .btn-secondary;
-      width: 55px;
       text-align: center;
       cursor: inherit;
       border-radius: side-values(0 0 0 0) !important;
