--- a/scss/layouts/_quotation-request.scss
+++ b/scss/layouts/_quotation-request.scss
@@ -112,85 +112,114 @@
   }
 }
 
-#custom-details{
-    .title-container{
-        padding-top: 79px;
+#custom-details {
+
+  padding-bottom: 87px;
+  .title-container {
+    padding-top: 79px;
+  }
+
+  a{
+    color: $brand-color;
+  }
+
+  h3 {
+    @include font-size(20px);
+    color: $basic-gray;
+    font-weight: normal;
+    font-style: normal;
+    text-transform: none;
+  }
+  .garage-btn-container {
+    text-align: right;
+  }
+  
+  .custom-container {
+    @include box-shadow;
+    @include boarder-left-radius;
+    margin-left: 11px;
+    padding-bottom: 10px;
+    margin-bottom: 30px;
+
+    label {
+      display: none;
+    }
+    br {
+      display: none;
     }
 
    
 
-    h3{
-        @include font-size(20px);
-        color: $basic-gray;
-        font-weight: normal;
-        font-style: normal;
-        text-transform: none;
+    .select-field-make {
+      @include boarder-left-radius;
+      background: $light-gray;
+      height: 55px;
+      width: 100%;
     }
-    .custom-container{
-        @include box-shadow;
-        @include boarder-left-radius;
-        margin-left:11px;
-        padding-bottom: 10px;
-        margin-bottom: 30px;
 
-        label{
-          display: none;
-        }
-        br{
-          display: none;
-        }
+    .select-field-middle {
+      background: $light-gray;
+      height: 55px;
+    }
 
-        .garage-btn-container{
-            text-align: right;
-        }
+    .field-vin {
+      @include boarder-right-radius(0, 20px);
+      background: $light-gray;
+      height: 55px;
+    }
 
-        .select-field-make{
-          @include boarder-left-radius;
-          background: $light-gray;
+    .parts-container {
+      padding-bottom: 11px;
+      label {
+        display: none;
+      }
+      br {
+        display: none;
+      }
+
+      .btn {
+        height: 55px;
+        left: 0;
+        @include font-size(15px);
+      }
+
+      #number-picker {
+        .btn-positive {
+          @include font-size(18px);
+          border-radius: side-values(0 0 0 0) !important;
           height: 55px;
-          width: 100%;
         }
-    
-        .select-field-middle{
-          background: $light-gray;
+        .btn-negative {
+          @include font-size(18px);
+          border-radius: side-values(0 0 20px 0) !important;
           height: 55px;
-        }
-
-        .field-vin{
           @include boarder-right-radius(0, 20px);
-          background: $light-gray;
+        }
+        input {
+          @include font-size(18px);
+          @extend .btn-secondary;
+          padding: 0;
           height: 55px;
+          text-align: center;
+          cursor: inherit;
+          border-radius: side-values(0 0 0 0) !important;
         }
-
-        .parts-container{
-          padding-bottom: 11px;
-          label{
-            display: none;
-          }
-          br{
-            display: none;
-          }
-
-          .btn{
-            left:0;
-            @include font-size(15px);
-          }
-        
-        }
-        .add-part-btn-container{
-          text-align: $right;
-          position: relative;
-          .btn{
-            @include box-shadow;
-            color: $brand-color;
-            @include font-size(15px);
-            position: absolute;
-            width: inherit;
-            right: -16px;
-            top: 11px;
-            background:$white;
-            border-top-right-radius: 0!important;
-          }
-        }
+      }
+    }
+    .add-part-btn-container {
+      text-align: $right;
+      position: relative;
+      .btn {
+        @include box-shadow;
+        color: $brand-color;
+        @include font-size(15px);
+        position: absolute;
+        width: inherit;
+        right: -16px;
+        top: 11px;
+        background: $white;
+        border-top-right-radius: 0 !important;
+      }
     }
   }
+}
