megred raed's work

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -84,5 +84,7 @@ $dir: ltr;
 @import "layouts/vehicles/vehicles";
 @import "layouts/setting/wish-list";
 @import "layouts/setting/setting";
-@import "layouts/footer";
+@import "layouts/garage-popup";
 @import "layouts/quotation-request";
+@import "layouts/send-request";
+@import "layouts/footer";
