--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -1,13 +1,13 @@
 .nav-icon-pl {
-  @include large-medium-screens{
+  @include large-medium-screens {
     padding-#{$left}: 35px;
   }
-  @include small-screen{
+  @include small-screen {
     padding-#{$left}: 1px;
   }
 }
 
-.q-burger-btn{
+.q-burger-btn {
   height: 50px;
 }
 
@@ -76,7 +76,7 @@
   }
   .lang {
     @include if-ltr {
-      font-family: "Cairo", sans-serif;
+      font-family: 'Cairo', sans-serif;
       //@include font-size(13px);
       font-weight: 400;
       @extend .position-relative;
@@ -91,10 +91,10 @@
 .custom-order {
   padding: side-values(5px 10px 5px 5px);
   height: 37px;
-  
+
   .icon-custom-order {
     @extend .d-inline-block;
-    @include large-medium-screens{
+    @include large-medium-screens {
       color: $brand-color;
       @include font-size(24px);
       height: 27px;
@@ -128,20 +128,95 @@
     @extend .position-relative;
     top: 2px;
   }
+  //header Sing In / Join
+  .dropdown-header {
+    p {
+      font-size: 15px;
+      text-align: $left;
+      display: inline-block;
+      text-transform: none;
+      opacity: 0.6;
+      font-family: Roboto;
+      font-weight: 500;
+      font-style: normal;
+      font-stretch: normal;
+      line-height: normal;
+      letter-spacing: normal;
+      margin: 12px 0px 5px 0px;
+      color: rgba(55, 54, 61, 0.6);
+    }
+    .join-us-text {
+      font-family: Roboto;
+      font-size: 15px;
+      font-weight: 500;
+      color: $basic-gray;
+      text-transform: none;
+    }
+    .btn {
+      background: $light-gray;
+      @extend .link-border-radius-signIn;
+      text-transform: none;
+      @include transition(all, 0.5s, ease);
+      cursor: pointer;
+    }
+    .btn-primary {
+      @extend .btn;
+      border-style: none;
+      background: $brand-color;
+      color: $white;
+      font-size: 16px;
+    }
+    a {
+      padding: 5px 10px;
+      margin-#{$left}: 5px;
+      background-color: $light-gray;
+      color: #475993;
+      font-size: 20px;
+      i {
+        font-size: 22px;
+      }
+    }
+    a.twit {
+      border-radius: 0px 20px 20px 0px;
+    }
+  }
+  .dropdown-footer {
+    margin-#{$left}: 10px;
+    p {
+      opacity: 1;
+      width: 58px;
+      height: 12px;
+      margin: 0px;
+      font-family: Roboto;
+      font-size: 12px;
+      font-weight: 500;
+      font-style: normal;
+      font-stretch: normal;
+      line-height: normal;
+      letter-spacing: normal;
+      text-align: $left;
+      color: $basic-gray;
+      display: inline-block;
+      text-transform: none;
+    }
+    img {
+      width: 15px;
+      height: 15px;
+    }
+  }
 }
 .user-actions {
   padding-bottom: 0;
   li:not(:last-child) {
     margin-#{$right}: 16px;
   }
-  @include large-medium-screens{
-    margin-top: 7px; 
+  @include large-medium-screens {
+    margin-top: 7px;
   }
 
-  @include small-screen{
+  @include small-screen {
     margin-top: 15px;
   }
-  
 
   li {
     @extend .align-middle;
@@ -152,13 +227,13 @@
     @extend .d-inline-block;
   }
 
-  .icon-custom-order{
-    @include small-screen{
+  .icon-custom-order {
+    @include small-screen {
       @include font-size(22px);
       height: 24px;
       display: block;
+    }
   }
-}
   .icon-search {
     line-height: 20px;
     @include font-size(22px);
@@ -201,6 +276,26 @@
         max-width: 100%;
         display: block;
       }
+      div {
+        display: inline-block;
+        background: red;
+        border-radius: 50%;
+        width: 15px;
+        height: 15px;
+        color: white;
+        text-align: center;
+        position: absolute;
+        top: 0;
+        #{$right}: 0;
+        margin-top: -5px;
+        margin-#{$right}: -5px;
+      }
+    }
+    .btn-primary {
+      color: $basic-gray;
+      border-radius: 0px 20px 20px 20px;
+      background-color: $light-gray;
+      font-size: 13px;
     }
   }
   .icon-heart,
@@ -211,11 +306,134 @@
   }
 }
 
+#garage {
+  .dropdown-menu {
+    right: 0 !important;
+    left: auto !important;
+    transform: translate3d(16%, 38px, 0px) !important;
+  }
+}
+#signin {
+  .dropdown-menu {
+    top: 19px !important;
+  }
+}
+.show {
+  color: $basic-gray;
+  background-color: $light-gray;
+  border-radius: 0px 0 20px 20px;
+  padding: 0px;
+}
+
 #mobile-header-details {
   button {
     font-size: inherit;
     i {
-      left: 0;
+      #{$left}: 0;
     }
+  }
+  //header Sing In / Join
+  //header Sing In / Join
+  .dropdown-header {
+    p {
+      margin-top: 30px;
+      opacity: 0.6;
+      font-family: Roboto;
+      font-size: 20px;
+      font-weight: 300;
+      text-align: $left;
+      color: rgba(55, 54, 61, 0.6);
+      text-transform: none;
+      display: inline-block;
+    }
+    .user {
+      span {
+        margin-#{$right}: 7px;
+        display: inline-block;
+        background-color: $light-gray;
+        padding: 10px 15px;
+        margin-top: 20px;
+        border-radius: 50px;
+        width: 56px;
+        height: 56px;
+      }
+      p {
+        width: 194px;
+        height: 24px;
+        opacity: 0.6;
+        font-family: Roboto;
+        font-size: 30px;
+        font-weight: 300;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        text-align: $left;
+        color: rgba(55, 54, 61, 0.6);
+        display: inline-block;
+      }
+    }
+    .join-us-text {
+      font-family: Roboto;
+      font-size: 17px;
+      font-weight: 500;
+      text-align: $left;
+      color: $basic-gray;
+      text-transform: none;
+    }
+    .btn {
+      background: $light-gray;
+      @extend .link-border-radius-signIn;
+      text-transform: none;
+      @include transition(all, 0.5s, ease);
+      cursor: pointer;
+    }
+    .btn-primary {
+      @extend .btn;
+      border-style: none;
+      background: $brand-color;
+      color: $white;
+      font-size: 19px;
+      margin-top: 10px;
+    }
+    a {
+      padding: 10px 12px;
+      margin-#{$left}: 7px;
+      background-color: $light-gray;
+      color: #475993;
+      font-size: 22px;
+    }
+    a.twit {
+      border-radius: 0px 20px 20px 0px;
+    }
+  }
+  .dropdown-footer {
+    margin-#{$left}: 10px;
+    p {
+      opacity: 1;
+      width: 58px;
+      height: 12px;
+      margin: 0px;
+      font-family: Roboto;
+      font-size: 12px;
+      font-weight: 500;
+      font-style: normal;
+      font-stretch: normal;
+      line-height: normal;
+      letter-spacing: normal;
+      text-align: $left;
+      color: $basic-gray;
+      display: inline-block;
+      text-transform: none;
+    }
+    img {
+      width: 15px;
+      height: 15px;
+    }
+  }
+  .slider-back {
+    margin-top: 17px;
+    margin-#{$left}: 15px;
+    font-size: 17px;
   }
 }
