--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -20,9 +20,10 @@ h3 {
 button {
   font-family: $button-font;
   @include font-size($button-font-size);
-
+  
   i {
     position: relative;
+    top: 3px;
   }
 }
 
