--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -6,6 +6,7 @@ $button-font: 'Roboto';
 $basic-gray: #37363d;
 $basic-black: #222222;
 $light-gray: #f7f7f7;
+$dark-gray: #efeeee;
 $very-light-grey: #e2e2e2;
 $brand-color: #ed4036;
 $charcoal-grey: rgba(55, 54, 60, 0.6);
