--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -12,6 +12,7 @@ $brand-color: #ed4036;
 $charcoal-grey: rgba(55, 54, 60, 0.6);
 $charcoal-grey-two: rgba(55, 54, 61, 0.8);
 $charcoal-grey-two-40: rgba(55, 54, 61, 0.4);
+$charcoal-grey-80: rgba(55, 54, 60, 0.8);
 $dark-charcoal-grey : #37363c;
 $light-charcoal-grey: rgba(55, 54, 60, 0.7);
 $lighter-grey: rgba(55, 54, 61, 0.5);
