added reactstrap to the project. Replaced primereact popup with reactstrap

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -40,6 +40,7 @@ $down-arrow-font-size: 25px;
 
 //container width
 $max-container : 1170px;
+$max-container-popup : 900px;
 
 // PADDING
 $padding-left: 128px;
