--- a/scss/layouts/vehicles/_vehicles.scss
+++ b/scss/layouts/vehicles/_vehicles.scss
@@ -1,6 +1,6 @@
 #vehicles {
   @include small-screen {
-    padding-top: 36px;
+    padding: side-values(36px 30px 0 16px);
     background: $light-gray;
   }
   .group-shadow-input {
